# bridge_uart

./: CMakeLists.txt  README.md  idf_component.yml
include/: bridge_uart.h  uart_spam.h
src/: bridge_uart.c  modem_uart_at_bridge.txt  uart_spam.c
